Added credits to About Page

--- a/assets/www/messages/messages-en.properties
+++ b/assets/www/messages/messages-en.properties
@@ -57,6 +57,8 @@ about-page-title = About
 about-version = Version
 about-copyright = This application is copyright (C) Wikimedia Foundation and contributing developers
 about-license = This application is free software under the GNU General Public License. You are welcome to distribute and modify it under certain conditions. See http://www.gnu.org/licenses/old-licenses/gpl-2.0.html for details. The source code is available at https://github.com/Wikimedia/WikipediaMobile
+about-contributors = We would like to recognize the following names for their contributions to the product: 
+about-credits = Wikipedia Mobile builds upon many Open Source works, including: 
 nearby-close = Close nearby pages screen
 nearby-title = Nearby pages
 app-description = Official Wikipedia App for Android. Wikipedia is the free encyclopedia containing more than 20 million articles in 280 languages, and is the most comprehensive and widely used reference work humans have ever compiled.\n\nFeatures: Save article to read later or offline, Search articles nearby, Share articles using Android "Share" function, Read article in a different language, Full screen search\n\nSend us your feedback on Twitter @WikimediaMobile.
