Translation updates from translatewiki.net

--- a/assets/www/messages/messages-arc.properties
+++ b/assets/www/messages/messages-arc.properties
@@ -6,16 +6,61 @@
 sitename=ܘܝܩܝܦܕܝܐ
 spinner-loading=ܡܛܥܘܢܐ...
 spinner-retrieving=ܡܩܠܘܒ̈ܐ ܚܒܫܝܬܐ ܡܢ $1...
+saved-pages-clear-all=ܫܘܦ ܠܟܠ ܦܬܘܬ̈ܐ ܚܡܝ̈ܐ
+saved-pages-close=ܨܘܕ ܟܘܐ ܕܦܬܘܬܐ ܚܡܝ̈ܐ
+saved-pages-max-warning=ܐܢܬ ܡܛܝܬ ܠܬܚܘܡܐ ܥܠܝܐ ܠܡܢܝܢܐ ܕܦܬܘܬ̈ܐ ܚܡܝ̈ܐ.
+page-saved=ܚܡܝܬܐ ܓܡܪ $1.
+page-already-saved=$1 ܠܒܟܬܐ ܒܕܥܒܪ.
+saved-page-remove-prompt=ܫܘܦ $1 ܡܢ ܦܬܘܬܐ ܚܡܝ̈ܐ؟
+clear-all-history-prompt=ܫܝܦܢ ܠܬܫܥܝܬܐ؟
+clear-all-saved-pages-prompt=ܫܘܦ ܠܟܠ ܦܬܘܬ̈ܐ ܚܡܝ̈ܐ؟
+saved-page-removed=ܦܐܬܐ $1 ܗܐ ܐܬܫܝܦܬ.
+saved-pages-title=ܕܦ̈ܐ ܢܛܝܪ̈ܐ
+menu-home=ܦܐܬܐ ܕܘܝܩܝܦܕܝܐ ܪܝܫܝܬܐ
+menu-language=ܩܪܝ ܒ...
+menu-savePage=ܠܒܘܟ ܕܦܐ
+menu-savedPages=ܕܦ̈ܐ ܢܛܝܪ̈ܐ
 menu-history=ܬܫܥܝܬܐ
+menu-back=ܗܦܟܐ
 menu-forward=ܠܩܕܡܐ
 menu-nearby=ܩܘܪܒܐ ܠ
 menu-settings=ܛܘܝܒ̈ܐ
 menu-selectText=ܓܒܝ ܟܬܒܬܐ
 menu-sharePage=ܫܘܬܦ ܦܐܬܐ
 menu-about=ܡܢܘ
+menu-cancel=ܒܛܘܠ
+menu-sources=ܡܒܘܥ̈ܐ
+settings-close=ܨܘܕ ܠܟܘܐ ܕܛܘܝܒ̈ܐ
 settings-title=ܛܘܝܒ̈ܐ
 settings-app-version-label=ܨܚܚܐ ܕܬܚܪ̈ܙܝܬܐ:
 settings-android-version-label=ܡܦܩܢܘܬܐ ܕܐܢܕܪܘܝܕ:
 settings-phonegap-version-label=ܡܦܩܢܘܬܐ ܕܦܘܢܓܐܦ:
 settings-language-label=ܠܫܢܐ:
 settings-language-desc=ܓܒܝ ܠܫܢܐ ܕܘܝܩܝܦܕܝܐ ܥܠ $1
+settings-font-size-label=ܓܘܫܡܐ ܕܣܪܛܐ
+settings-font-size-desc=ܥܘܝܢܐ ܓܘܫܡܐ ܕܣܪܛܐ ܒܓܘ ܦܐܬܐ
+settings-font-size-smaller=ܙܥܘܪܐ
+settings-font-size-normal=ܟܝܢܝܐ
+settings-font-size-larger=ܪܒܐ
+langlinks-close=ܨܘܕ ܠܟܘܐ ܕܩܪܝ ܒܠܫܢ̈ܐ ܐܚܪܝܢܐ
+langlinks-title=ܩܪܝ ܠܦܐܬܐ ܒ...
+error-not-available=ܡܦܚܠܬܐ، ܗܢܐ ܦܐܬܐ ܠܝܬ.
+error-offline=ܐܢܬ ܠܐ ܝܨܝܪܐ ܒܐܢܛܪܢܛ ܘܦܐܬܐ ܠܐ ܐܬܚܡܝܬ ܒܠܘܩܕܡ.
+error-not-found=ܡܦܚܠܬܐ، ܠܝܬ ܦܐܬܐ ܒܗܘ ܫܡܐ ܛܠܝܒܐ.
+error-search-again=ܒܨܝ ܥܠ ܚܕ ܦܬܓܡܐ ܐܚܪܝܢܐ.
+about-page-label=ܡܢܘ ܚܢܢ
+history-clear-all=ܫܘܦ ܠܬܫܥܝܬܐ
+history-close=ܨܘܕ ܟܘܐ ܕܬܫܥܝܬܐ
+history-title=ܬܫܥܝܬܐ
+about-close=ܨܘܕ ܟܘܐ ܕܡܢܘ
+about-page-title=ܡܢܘ
+about-version=ܨܚܚܐ
+about-copyright=ܙܕܩ̈ܐ ܕܦܪܣܬܐ ܗܢܐ ܐܦܠܝܟܐܝܫܘܢ ܢܛܝܪ̈ܐ (C) ܠܫܘܬܐܣܐ ܕܘܝܩܝܦܕܝܐ ܘܡܛܘܪ̈ܢܐ ܡܫܘܬܦܢ̈ܐ.
+nearby-close=ܨܘܕ ܟܘܐ ܕܦܬܘܬܐ ܩܪܝܒ̈ܐ
+nearby-title=ܦܬܘܬܐ ܩܪܝܒ̈ܐ
+search-results-did-you-mean-label=ܐܪܐ ܡܥܢܐ ܕܝܠܘܟ:
+search-results-no-results=ܠܝܬ ܦܠܛ̈ܐ
+search-results-close=ܨܘܕ ܦܠܛ̈ܐ ܕܒܘܨܝܐ
+search-button=ܒܨܝ ܒܓܘ ܘܝܩܝܦܕܝܐ ܥܠ ܗܢܐ ܟܬܒܬܐ
+search-placeholder=ܒܨܝ
+do-fulltext-search=ܚܘܝ ܝܬܝܪ ܦܠܛ̈ܐ...
