--- a/assets/www/messages/messages-as.properties
+++ b/assets/www/messages/messages-as.properties
@@ -1,23 +1,34 @@
 # This file is distributed under the same license as the Wikipedia Mobile package.
 #
 # Author: Ansumang
+# Author: Chaipau
+# Author: Gitartha.bordoloi
 # Author: Nilamdyuti
 
 sitename=ৱিকিপিডিয়া
 spinner-loading=ল'ড কৰা হৈছে...
 spinner-retrieving=$1 -ৰ পৰা সমল উদ্ধাৰ কৰা হৈছে ...
+saved-pages-clear-all=সকলো সাঁচি থোৱা পৃষ্ঠা মচি পেলাওক।
+saved-pages-close=সাঁচি থোৱা পৃষ্ঠাৰ পৰ্দা বন্ধ কৰক।
+saved-pages-max-warning=আপুনি সৰ্বোচ্চ সংখ্যক পৃষ্ঠা সংৰক্ষণ কৰিছে।
+page-saved=$1 সাঁচি থোৱা হ'ল।
+page-already-saved=$1 ইতিমধ্যে সাঁচি থোৱা হ'ল।
+clear-all-history-prompt=ইতিহাস মচি পেলাওক?
+menu-home=ৱিকিপিডিয়া বেটুপাত
 menu-history=ইতিহাস
+menu-back=ঘূৰি যাওক
 menu-forward=আগলৈ যাওক
 menu-nearby=কাষৰীয়া
 menu-settings=সংহতিসমূহ
-menu-selectText=লিখনী নিৰ্বাচন কৰক
+menu-selectText=পাঠ নিৰ্বাচন কৰক
 menu-sharePage=পৃষ্ঠা অংশীদাৰী কৰক
 menu-about=বিষয়ে
+menu-cancel=বাতিল কৰক
+menu-sources=উৎস
 settings-title=সংহতিসমূহ
 settings-app-version-label=এপ্লিকেচন সংস্কৰণ:
 settings-android-version-label=Android সংস্কৰণ:
 settings-phonegap-version-label=PhoneGap সংস্কৰণ:
 settings-language-label=ভাষা:
-# Fuzzy
-settings-language-desc=আপোনাৰ ৱিকিপিডিয়া ভাষা সংহতি কৰক
+settings-language-desc=$1ত ভাষা নিৰ্ণয় কৰক
 history-title=খতিয়ান
