--- a/assets/www/messages/messages-ast.properties
+++ b/assets/www/messages/messages-ast.properties
@@ -69,3 +69,4 @@ search-results-no-results=Nun s'alcontraron resultaos
 search-results-close=Zarrar resultaos de la gueta
 search-button=Guetar esti testu na Uiquipedia
 search-placeholder=Guetar
+do-fulltext-search=Ver más resultaos...
