--- a/assets/www/messages/messages-be-tarask.properties
+++ b/assets/www/messages/messages-be-tarask.properties
@@ -72,3 +72,4 @@ search-results-no-results=Нічога ня знойдзена
 search-results-close=Закрыць вынікі пошуку
 search-button=Шукаць гэты тэкст у Вікіпэдыі
 search-placeholder=Пошук
+do-fulltext-search=Паказаць болей вынікаў…
