--- a/assets/www/messages/messages-br.properties
+++ b/assets/www/messages/messages-br.properties
@@ -11,7 +11,7 @@ saved-pages-close=Serriñ holl skrammoù ar pajennoù enrollet
 saved-pages-max-warning=Tizhet ganeoc'h an niver brasañ a bajennoù enrollet.
 page-saved=$1 enrollet.
 page-already-saved=$1 a zo bet enrollet c'hoazh.
-saved-page-remove-prompt=Dilemmel $1 deus ar pajennoù enrollet ?
+saved-page-remove-prompt=Dilemel $1 eus ar pajennoù enrollet ?
 clear-all-history-prompt=Diverkañ an Istor ?
 clear-all-saved-pages-prompt=Diverkañ an holl bajennoù enrollet ?
 saved-page-removed=Lamet eo bet $1.
@@ -67,5 +67,6 @@ app-description=Arolad ofisiel Wikipedia evit Android. An holloueziadur frank a 
 search-results-did-you-mean-label=N'hoc'h eus ket soñjet kentoc'h e :
 search-results-no-results=N'eus bet kavet disoc'h ebet
 search-results-close=Serriñ disoc'hoù ar c'hlask
-search-button=Klask an destenn-mañ e wikipedia
+search-button=Klask an destenn-mañ e Wikipedia
 search-placeholder=Klask
+do-fulltext-search=Diskouez disoc'hoù ouzhpenn...
