--- a/assets/www/messages/messages-ca.properties
+++ b/assets/www/messages/messages-ca.properties
@@ -69,3 +69,4 @@ search-results-no-results=Cap resultat
 search-results-close=Tanca els resultats de cerca
 search-button=Cerca a la Viquipèdia aquest text
 search-placeholder=Cerca
+do-fulltext-search=Mostra més resultats...
