--- a/assets/www/messages/messages-da.properties
+++ b/assets/www/messages/messages-da.properties
@@ -68,3 +68,4 @@ search-results-no-results=Ingen resultater fundet
 search-results-close=Luk søgeresultater
 search-button=Søg Wikipedia efter denne tekst
 search-placeholder=Søg
+do-fulltext-search=Vis flere resultater...
