--- a/assets/www/messages/messages-de.properties
+++ b/assets/www/messages/messages-de.properties
@@ -71,3 +71,4 @@ search-results-no-results=Es wurde keine Ergebnisse gefunden.
 search-results-close=Bildschirm mit den Suchergebnissen schließen
 search-button=In der Wikipedia nach diesem Text suchen
 search-placeholder=Suche
+do-fulltext-search=Weitere Ergebnisse anzeigen …
