--- a/assets/www/messages/messages-dsb.properties
+++ b/assets/www/messages/messages-dsb.properties
@@ -69,3 +69,4 @@ search-results-no-results=Žedne wuslědki namakane
 search-results-close=Pytańske wuslědki zacyniś
 search-button=Wikipediju za toś tym tekstom pśepytaś
 search-placeholder=Pytaś
+do-fulltext-search=Dalšne wuslědki pokazaś...
