--- a/assets/www/messages/messages-es.properties
+++ b/assets/www/messages/messages-es.properties
@@ -1,5 +1,6 @@
 # This file is distributed under the same license as the Wikipedia Mobile package.
 #
+# Author: Armando-Martin
 # Author: Bernardom
 # Author: Fitoschido
 # Author: Platonides
@@ -8,10 +9,14 @@
 sitename=Wikipedia
 spinner-loading=Cargando…
 spinner-retrieving=Recuperando los contenidos desde $1...
+saved-pages-clear-all=Borrar todas las páginas guardadas
+saved-pages-close=Cerrar la pantalla de páginas guardadas
 saved-pages-max-warning=Ha alcanzado el número máximo de páginas que podían almacenarse
 page-saved=Almacenado $1
 page-already-saved=$1 ya está almacenado
 saved-page-remove-prompt=¿Sacar $1 de las páginas almacenadas?
+clear-all-history-prompt=¿Borrar historial?
+clear-all-saved-pages-prompt=¿Borrar todas las páginas guardadas?
 saved-page-removed=$1 ha sido retirada
 saved-pages-title=Páginas almacenadas
 menu-home=Página principal de Wikipedia
@@ -19,6 +24,7 @@ menu-language=Leer en…
 menu-savePage=Almacenar página
 menu-savedPages=Páginas almacenadas
 menu-history=Historial
+menu-back=Volver
 menu-forward=Siguiente
 menu-nearby=Cercano
 menu-settings=Ajustes
@@ -26,6 +32,9 @@ menu-selectText=Seleccionar texto
 menu-sharePage=Compartir la página
 menu-about=Acerca de
 menu-cancel=Cancelar
+menu-output=Salida
+menu-sources=Fuentes
+settings-close=Cerrar la pantalla de configuración
 settings-title=Ajustes
 settings-app-version-label=Versión de la aplicación:
 settings-android-version-label=Versión de Android:
@@ -37,14 +46,30 @@ settings-font-size-desc=Establecer el tamaño de letra del artículo
 settings-font-size-smaller=Pequeño
 settings-font-size-normal=Normal
 settings-font-size-larger=Grande
+langlinks-close=Cerrar la pantalla de lectura en otros idiomas
 langlinks-title=Leer el artículo en…
 error-not-available=Lo sentimos, esta página no está disponible
 error-offline=La página no está almacenada y no se encuentra conectado
+error-offline-prompt=Vuelva a intentarlo cuando está conectado a una red.
 error-saved-or-online=Puede abrir una página almacenada o conectarse y buscar
 error-not-found=No existe ningún artículo con ese título.
 error-not-found-reason=El artículo no existe o el título está mal escrito
 error-search-again=Por favor, busque otro término.
+about-page-label=¿Quiénes somos?
+history-clear-all=Limpiar historial
+history-close=Cerrar la pantalla del historial
 history-title=Historial
+about-close=Cerrar la pantalla
+about-page-title=Acerca de
 about-version=Versión
-# Fuzzy
-app-description=Aplicación oficial de Wikipedia para Android. Wikipedia es la enciclopedia libre con más de 20 millones de artículos en 280 idiomas y es la obra de referencia más exhaustiva y ampliamente usada jamás recopilada por la humanidad.\n\nCaracterísticas: Guardar artículos para leerlos más tarde o sin conexión, Buscar artículos cercanos, Compartir artículos usando la función "Compartir" de Android, Leer artículo en otro idioma, Búsqueda a pantalla completa.
+about-copyright=Esta aplicación está bajo el copyright (C) de Fundación Wikimedia y los programadores que contribuyen a ella.
+about-license=Esta aplicación es software libre bajo la licencia pública General de GNU. Le invitamos a distribuirla y modificarla bajo ciertas condiciones. Consulte http://www.gnu.org/licenses/old-licenses/gpl-2.0.html para obtener más detalles. El código fuente está disponible en https://github.com/Wikimedia/WikipediaMobile
+nearby-close=Cerrar la pantalla de páginas vecinas
+nearby-title=Páginas vecinas
+app-description=Aplicación oficial de Wikipedia para Android. Wikipedia es la enciclopedia libre que contiene más de 20 millones de artículos en 280 idiomas y es la obra de referencia más exhaustiva y ampliamente usada jamás recopilada por la humanidad.\n\nCaracterísticas: Guardar artículos para leerlos más tarde o sin conexión, Buscar artículos cercanos, Compartir artículos usando la función "Compartir" de Android, Leer artículo en otro idioma, Búsqueda a pantalla completa.\n\nEnvíenos sus comentarios a Twitter en @WikimediaMobile.
+search-results-did-you-mean-label=Quizás quiso decir:
+search-results-no-results=No se encontraron resultados
+search-results-close=Limpiar los resultados de la búsqueda
+search-button=Buscar este texto en Wikipedia
+search-placeholder=Buscar
+do-fulltext-search=Mostrar más resultados...
