--- a/assets/www/messages/messages-fr.properties
+++ b/assets/www/messages/messages-fr.properties
@@ -73,3 +73,4 @@ search-results-no-results=Aucun résultat trouvé
 search-results-close=Fermer les résultats de recherche
 search-button=Rechercher ce texte dans Wikipédia
 search-placeholder=Rechercher
+do-fulltext-search=Afficher plus de résultats...
