--- a/assets/www/messages/messages-fur.properties
+++ b/assets/www/messages/messages-fur.properties
@@ -15,12 +15,14 @@ menu-language=Cambie la lenghe
 menu-savePage=Salve la pagjine
 menu-savedPages=Pagjinis salvadis
 menu-history=Storic
+menu-back=Indaûr
 menu-forward=Indevant
 menu-nearby=Dongje
 menu-settings=Impuestazions
 menu-selectText=Selezione il test
 menu-sharePage=Condivît la pagjine
 menu-about=Informazions
+menu-cancel=Scancele
 settings-title=Impuestazions
 settings-app-version-label=Version de aplicazion:
 settings-android-version-label=Version di Android:
@@ -40,6 +42,12 @@ error-not-found=Nus displâs, no esist une pagjine cun chest non.
 error-not-found-reason=Tu puedis vê sbaliât di scrivi il titul o la pagjine podarès no jessi stade creade.
 error-search-again=Cîr un altri tiermin.
 history-title=Storic
+about-page-title=Informazions
 about-version=Version
 about-copyright=Cheste aplicazion e je copyright (C) Wikimedia Foundation e i disvilupadôrs che a àn contribuît
 about-license=Cheste aplicazion al è software libar sot de GNU General Public License. Ti invidìn a distribuî e modificâle sot di ciertis condizions. Cjale http://www.gnu.org/licenses/old-licenses/gpl-2.0.html pai detais. Il codiç sorzint al è disponibil lì di https://github.com/Wikimedia/WikipediaMobile
+search-results-did-you-mean-label=Forsit tu cirivis:
+search-results-no-results=Nissun risultât
+search-button=Cîr chest test te Vichipedie
+search-placeholder=Cîr
+do-fulltext-search=Mostre altris risultâts...
