--- a/assets/www/messages/messages-gd.properties
+++ b/assets/www/messages/messages-gd.properties
@@ -11,8 +11,11 @@ saved-pages-max-warning=Shàbhail thu na tha ceadaichte dhut de dhuilleagan.
 page-saved=Chaidh $1 a shàbhaladh.
 page-already-saved=Chaidh $1 a shàbhaladh mu thràth.
 saved-page-remove-prompt=A bheil thu airson $1 a thoirt air falbh o na shàbhail thu de dhuilleagan?
+clear-all-history-prompt=Am bu toigh leat an eachdraidh fhalamhadh?
+clear-all-saved-pages-prompt=A bheil thu airson gach duilleag a chaidh a shàbhaladh fhalamhachadh?
 saved-page-removed=Chaidh $1 a thoirt air falbh.
 saved-pages-title=Duilleagan a shàbhail thu
+menu-home=Duilleag mhòr na h-Uicipeid
 menu-language=Leugh ann an...
 menu-savePage=Sàbhail an duilleag
 menu-savedPages=Duilleagan a shàbhail thu
@@ -25,6 +28,9 @@ menu-selectText=Tagh teacsa
 menu-sharePage=Co-roinn an duilleag
 menu-about=Mu
 menu-cancel=Sguir dheth
+menu-output=Às-chur
+menu-sources=Tùsan
+settings-close=Dùin sgrìn nan roghainnean
 settings-title=Roghainnean
 settings-app-version-label=Tionndadh na h-aplacaid:
 settings-android-version-label=An tionndadh de Android:
@@ -36,14 +42,30 @@ settings-font-size-desc=Suidhich meud a' chruth-chlò air an duilleag
 settings-font-size-smaller=Beag
 settings-font-size-normal=Àbhaisteach
 settings-font-size-larger=Mòr
+langlinks-close=Dùin sgrìn na feadhainn a chaidh a leughadh ann an cànain eile
 langlinks-title=Leugh an duilleag ann an...
 error-not-available=Duilich, chan eil an duilleag seo ri fhaighinn.
 error-offline=Tha thu far loidhne 's cha deach an duilleag seo a shàbhaladh roimhe.
+error-offline-prompt=Feuch ris a-rithist nuair a bhios ceangal agad ri lìonra.
 error-saved-or-online='S urrainn dhut duilleag a shàbhail thu fhosgladh no a dhol air loidhne 's lorg a dhèanamh.
 error-not-found=Duilich, chan eil duilleag ann air a bheil an t-ainm sin.
 error-not-found-reason=Saoil na sgrìobh thu cearr an t-ainm no 's mathaid nach deach an duilleag a chruthachadh fhathast.
 error-search-again=Nach lorg thu rud eile?
+about-page-label=Mu ar deidhinn
+history-clear-all=Falamhaich an eachdraidh
+history-close=Dùin sgrìn na h-eachdraidh
 history-title=Eachdraidh
+about-close=Dùin an sgrìn a tha mu ar deidhinn
+about-page-title=Mu dheidhinn
 about-version=Tionndadh
 about-copyright='S ann aig (C) Fonndas Wikimedia 's na com-pàirtichean leasachaidh a tha còraichean air an aplacaid seo
 about-license=Tha an aplacaid seo 'na bhathar-bog saor fo GNU General Public License. Tha fàilte romhad a sgaoileadh 's atharrachadh fo chumhaichean àraid. Faic http://www.gnu.org/licenses/old-licenses/gpl-2.0.html airson mion-fhiosrachadh. Gheibhear an còd tùsail aig https://github.com/Wikimedia/WikipediaMobile
+nearby-close=Dùin sgrìn nan duilleagan a tha am fagas
+nearby-title=Duilleagan a tha am fagas
+app-description=An aplacaid oifigeach airson Android. Tha an Uicipeid 'na leabhar-eòlais saor sa bheil barrachd air 20 millean artaigil ann an 280 cànan agus 's e an Uicipeid an tùs-fiosrachaidh as motha agus as cleachdte a chruthaich mac an duine a-riamh.\n\nFeartan: Gabhaidh artaigilean a shàbhaladh 's gus an leughadh uaireigin eile no far loidhne, faodaidh tu artaigilean a tha am fagas a leughadh, iad a cho-roinneadh leis an fheart "Co-roinn" aig Android, rudan a leughadh ann an diofar cànan agus lorg làn-sgrìn a dhèanamh\n\nInnis dhuinn dè do bheachd mu dheidhainn air Twitter @WikimediaMobile.
+search-results-did-you-mean-label=An e na leanas a bha fa-near dhut:
+search-results-no-results=Cha deach toradh a lorg
+search-results-close=Dùin toraidhean an luirg
+search-button=Lorg an teacsa seo air an Uicipeid
+search-placeholder=Lorg
+do-fulltext-search=Seall barrachd thoraidhean...
