--- a/assets/www/messages/messages-gl.properties
+++ b/assets/www/messages/messages-gl.properties
@@ -68,3 +68,4 @@ search-results-no-results=Non se atopou ningún resultado
 search-results-close=Pechar os resultados da procura
 search-button=Procurar este texto na Wikipedia
 search-placeholder=Procurar
+do-fulltext-search=Mostrar máis resultados...
