--- a/assets/www/messages/messages-gu.properties
+++ b/assets/www/messages/messages-gu.properties
@@ -1,5 +1,6 @@
 # This file is distributed under the same license as the Wikipedia Mobile package.
 #
+# Author: Ankit
 # Author: Rangilo Gujarati
 
 sitename=વિકિપીડિયા
@@ -68,3 +69,4 @@ search-results-no-results=કોઈ પરિણામ નથી મળેલ.
 search-results-close=શોધ પરિણામો બંધ કરો
 search-button=આ ટેક્સ્ટ માટે વિકિપિડિયામાં શોધો
 search-placeholder=શોધો
+do-fulltext-search=વધુ પરિણામો બતાવો...
