--- a/assets/www/messages/messages-he.properties
+++ b/assets/www/messages/messages-he.properties
@@ -70,3 +70,4 @@ search-results-no-results=לא נמצאו תוצאות
 search-results-close=סגירת תוצאות חיפוש
 search-button=חיפוש טקסט זה בוויקיפדיה
 search-placeholder=חיפוש
+do-fulltext-search=הצגת תוצאות נוספות...
