--- a/assets/www/messages/messages-hsb.properties
+++ b/assets/www/messages/messages-hsb.properties
@@ -69,3 +69,4 @@ search-results-no-results=Žane wuslědki namakane
 search-results-close=Pytanske wuslědki začinić
 search-button=Wikipediju za tutym tekstom přepytać
 search-placeholder=Pytać
+do-fulltext-search=Dalše wuslědki pokazać...
