--- a/assets/www/messages/messages-ia.properties
+++ b/assets/www/messages/messages-ia.properties
@@ -68,3 +68,4 @@ search-results-no-results=Nulle resultato trovate
 search-results-close=Clauder resultatos de recerca
 search-button=Cercar iste texto in Wikipedia
 search-placeholder=Cercar
+do-fulltext-search=Monstrar plus resultatos...
