--- a/assets/www/messages/messages-it.properties
+++ b/assets/www/messages/messages-it.properties
@@ -2,6 +2,7 @@
 #
 # Author: Aushulz
 # Author: Beta16
+# Author: Gianfranco
 # Author: Inskatolata
 # Author: Nemo bis
 # Author: Valepert
@@ -11,12 +12,17 @@
 sitename=Wikipedia
 spinner-loading=Caricamento in corso...
 spinner-retrieving=Trasferimento dati da $1...
+saved-pages-clear-all=Cancella tutte le pagine salvate
+saved-pages-close=Chiudi la schermata delle pagine salvate
 saved-pages-max-warning=È stato raggiunto il numero massimo di pagine salvate.
 page-saved=$1 salvata.
 page-already-saved=$1 già salvata.
 saved-page-remove-prompt=Rimuovere $1 dalle pagine salvate?
+clear-all-history-prompt=Cancellare la cronologia?
+clear-all-saved-pages-prompt=Cancellare tutte le pagine salvate?
 saved-page-removed=$1 è stata rimossa.
 saved-pages-title=Pagine salvate
+menu-home=Homepage di Wikipedia
 menu-language=Cambia lingua
 menu-savePage=Salva la pagina
 menu-savedPages=Pagine salvate
@@ -29,6 +35,9 @@ menu-selectText=Seleziona testo
 menu-sharePage=Condividi la pagina
 menu-about=Informazioni su
 menu-cancel=Annulla
+menu-output=Risultati
+menu-sources=Fonti
+settings-close=Chiudi la schermata delle impostazioni
 settings-title=Impostazioni
 settings-app-version-label=Versione dell'applicazione:
 settings-android-version-label=Versione di Android:
@@ -40,18 +49,30 @@ settings-font-size-desc=Imposta le dimensioni del font
 settings-font-size-smaller=Piccolo
 settings-font-size-normal=Normale
 settings-font-size-larger=Grande
+langlinks-close=Chiudi la schermata della lettura in altre lingue
 langlinks-title=Leggi articolo in...
 error-not-available=Siamo spiacenti, questa pagina non è disponibile.
 error-offline=Non sei connesso e la pagina non è stata precedentemente salvata.
+error-offline-prompt=Per favore riprova quando sei connesso ad una rete.
 error-saved-or-online=Puoi aprire una pagina salvata o andare online e cercare.
 error-not-found=Ci dispiace, non esiste alcuna pagina con quel nome.
 error-not-found-reason=Il titolo non è corretto o l'articolo non è ancora stato creato.
 error-search-again=Si prega di cercare un altro termine.
+about-page-label=Chi siamo
+history-clear-all=Cancella la cronologia
+history-close=Chiudi la schermata della cronologia
 history-title=Cronologia
+about-close=Chiudere la schermata su chi siamo
+about-page-title=A proposito di
 about-version=Versione
 about-copyright=Questa applicazione è copyright (C) Wikimedia Foundation e degli sviluppatori che vi hanno contribuito
 about-license=Questa applicazione è un software libero rilasciato con licenza GNU General Public License. Puoi redistribuirlo e modificarlo in base a determinate condizioni. Vedi http://www.gnu.org/licenses/old-licenses/gpl-2.0.html per i dettagli. Il codice sorgente è disponibile su https://github.com/Wikimedia/WikipediaMobile
+nearby-close=Chiudi la schermata delle pagine nelle vicinanze
+nearby-title=Pagine nelle vicinanze
 app-description=Applicazione ufficiale di Wikipedia per Android. Wikipedia è l'enciclopedia libera con oltre 20 milioni di voci in 280 lingue ed è l'opera di consultazione più completa e più usata nella storia dell'umanità.\n\nCaratteristiche: salva la voce per una lettura successiva o non in linea, cerca voci relative a luoghi vicini, condividi voci attraverso la funzione "Condividi" di Android, leggi la voce in un'altra lingua, ricerca a tutto schermo.\n\nScrivici in Twitter @WikimediaMobile.
 search-results-did-you-mean-label=Forse cercavi:
 search-results-no-results=Nessun risultato
+search-results-close=Chiudi i risultati della ricerca
+search-button=Cerca questo testo in Wikipedia
 search-placeholder=Ricerca
+do-fulltext-search=Mostra più risultati...
