--- a/assets/www/messages/messages-ko.properties
+++ b/assets/www/messages/messages-ko.properties
@@ -68,3 +68,4 @@ search-results-no-results=결과가 없습니다.
 search-results-close=검색 결과 닫기
 search-button=이 텍스트로 위키백과 검색하기
 search-placeholder=검색
+do-fulltext-search=더 많은 결과 보기...
