--- a/assets/www/messages/messages-lb.properties
+++ b/assets/www/messages/messages-lb.properties
@@ -67,3 +67,4 @@ search-results-no-results=Näischt fonnt
 search-results-close=Resultater vum Sichen zoumaachen
 search-button=Op Wikipedia no dësem Text sichen
 search-placeholder=Sichen
+do-fulltext-search=Méi Resultater weisen ...
