--- a/assets/www/messages/messages-lv.properties
+++ b/assets/www/messages/messages-lv.properties
@@ -42,5 +42,7 @@ error-saved-or-online=Jūs varat atvērt saglabāto lapu vai iet tiešsaistē un
 error-not-found=Atvainojiet, nav raksta ar šādu nosaukumu.
 error-not-found-reason=Jūs, iespējams, ievadījāt kļūdainu nosaukumu vai raksts netika izveidots.
 error-search-again=Lūdzu, meklējiet pēc cita nosacījuma.
+about-page-label=Par mums
 history-title=Vēsture
+about-page-title=Par
 about-version=Versija
