--- a/assets/www/messages/messages-mk.properties
+++ b/assets/www/messages/messages-mk.properties
@@ -70,3 +70,4 @@ search-results-no-results=Нема пронајдено резултати
 search-results-close=Затвори резултати
 search-button=Пребарајте го текстов во Википедија
 search-placeholder=Пребарај
+do-fulltext-search=Прикажи уште резултати...
