--- a/assets/www/messages/messages-ms.properties
+++ b/assets/www/messages/messages-ms.properties
@@ -69,3 +69,4 @@ search-results-no-results=Tiada hasil carian
 search-results-close=Tutup hasil carian
 search-button=Cari teks ini di Wikipedia
 search-placeholder=Cari
+do-fulltext-search=Tunjukkan lebih banyak hasil carian...
