--- a/assets/www/messages/messages-nds-nl.properties
+++ b/assets/www/messages/messages-nds-nl.properties
@@ -69,3 +69,4 @@ search-results-no-results=Gien resultaoten evunnen
 search-results-close=Zeukresultaoten sluten
 search-button=In Wikipedie zeuken naor disse tekste
 search-placeholder=Zeuken
+do-fulltext-search=Laot meer resultaoten zien...
