--- a/assets/www/messages/messages-nl.properties
+++ b/assets/www/messages/messages-nl.properties
@@ -72,3 +72,4 @@ search-results-no-results=Geen resultaten gevonden
 search-results-close=Zoekresultaten sluiten
 search-button=In Wikipedia zoeken naar deze tekst
 search-placeholder=Zoeken
+do-fulltext-search=Meer resultaten...
