--- a/assets/www/messages/messages-no.properties
+++ b/assets/www/messages/messages-no.properties
@@ -50,8 +50,7 @@ about-version=Versjon
 about-copyright=© Opphavsretten til dette programmet tilhører Wikimedia Foundation og utviklerne som har bidratt
 about-license=Dette programmet er fri programvare under GNU General Public License. Du er velkommen til å spre og endre det, på visse vilkår. Se http://www.gnu.org/licenses/old-licenses/gpl-2.0.html for mer informasjon. Kildekoden er tilgjengelig på https://github.com/Wikimedia/WikipediaMobile
 nearby-title=Sider i nærheten
-# Fuzzy
-app-description=Offisiell Wikipedia-app for Android. Wikipedia er det frie leksikonet med mer enn 20 millioner artikler på 280 språk, og er det mest brukte og mest omfattende oppslagsverket noensinne.\n\nFunksjoner: Lagre artikler for å lese senere eller frakoblet; søke etter artikler om ting i nærheten; dele artikler med Androids «Del»-funksjon; lese artikler på andre språk; fullskjermsøk.
+app-description=Offisiell Wikipedia-app for Android. Wikipedia er det frie leksikonet med mer enn 20 millioner artikler på 280 språk, og er det mest brukte og mest omfattende oppslagsverket noensinne.\n\nFunksjoner: Lagre artikler for å lese senere eller frakoblet; søke etter artikler om ting i nærheten; dele artikler med Androids «Del»-funksjon; lese artikler på andre språk; fullskjermsøk.\n\nGi oss tilbakemelding på Twitter @WikimediaMobile.
 search-results-did-you-mean-label=Mente du:
 search-results-no-results=Ingen resultater funnet
 # Fuzzy
