--- a/assets/www/messages/messages-pl.properties
+++ b/assets/www/messages/messages-pl.properties
@@ -1,5 +1,6 @@
 # This file is distributed under the same license as the Wikipedia Mobile package.
 #
+# Author: BeginaFelicysym
 # Author: Cysioland
 # Author: Mikołka
 # Author: Sp5uhe
@@ -38,7 +39,7 @@ settings-title=Ustawienia
 settings-app-version-label=Wersja aplikacji
 settings-android-version-label=Wersja Androida
 settings-phonegap-version-label=Wersja PhoneGapa
-settings-language-label=Język
+settings-language-label=Język:
 settings-language-desc=Wybierz wersję językową strony $1
 settings-font-size-label=Rozmiar czcionki
 settings-font-size-desc=Ustaw rozmiar czcionki
@@ -71,3 +72,4 @@ search-results-no-results=Nie znaleziono
 search-results-close=Wyczyść wyniki wyszukiwania
 search-button=Wyszukaj ten tekst w Wikipedii
 search-placeholder=Szukaj
+do-fulltext-search=Pokaż więcej wyników...
