--- a/assets/www/messages/messages-pms.properties
+++ b/assets/www/messages/messages-pms.properties
@@ -70,3 +70,4 @@ search-results-no-results=Gnun arzultà trovà
 search-results-close=Sara j'arzultà d'arserca
 search-button=Arserché ës test an Wikipedia
 search-placeholder=Sërca
+do-fulltext-search=Smon-e pi d'arzultà...
