--- a/assets/www/messages/messages-ro.properties
+++ b/assets/www/messages/messages-ro.properties
@@ -69,3 +69,4 @@ search-results-no-results=Niciun rezultat găsit
 search-results-close=Închide rezultatele căutării
 search-button=Caută acest text în Wikipedia
 search-placeholder=Căutare
+do-fulltext-search=Arată mai multe rezultate...
