--- a/assets/www/messages/messages-sr-ec.properties
+++ b/assets/www/messages/messages-sr-ec.properties
@@ -69,3 +69,4 @@ search-results-no-results=Нема резултата
 search-results-close=Затвори резултате
 search-button=Претражи текст на Википедији
 search-placeholder=Претражи
+do-fulltext-search=Прикажи више резултата…
