--- a/assets/www/messages/messages-sr-el.properties
+++ b/assets/www/messages/messages-sr-el.properties
@@ -69,3 +69,4 @@ search-results-no-results=Nema rezultata
 search-results-close=Zatvori rezultate
 search-button=Pretraži tekst na Vikipediji
 search-placeholder=Pretraži
+do-fulltext-search=Prikaži više rezultata…
