--- a/assets/www/messages/messages-sv.properties
+++ b/assets/www/messages/messages-sv.properties
@@ -1,6 +1,7 @@
 # This file is distributed under the same license as the Wikipedia Mobile package.
 #
 # Author: Jsoby
+# Author: Lokal Profil
 # Author: WikiPhoenix
 
 sitename=Wikipedia
@@ -69,3 +70,4 @@ search-results-no-results=Inga resultat hittades
 search-results-close=Stäng sökresultaten
 search-button=Sök på Wikipedia med denna text
 search-placeholder=Sök
+do-fulltext-search=Visa fler resultat...
