--- a/assets/www/messages/messages-tr.properties
+++ b/assets/www/messages/messages-tr.properties
@@ -2,6 +2,7 @@
 #
 # Author: Emperyan
 # Author: Homonihilis
+# Author: LuCKY
 # Author: Universal Life
 
 sitename=Vikipedi
@@ -62,8 +63,11 @@ about-page-title=Hakkında
 about-version=Sürüm
 about-copyright=Bu uygulamanın telif hakkı (C) Wikimedia Vakfı ve katkıda bulunan geliştiricilere aittir.
 about-license=Bu uygulama, GNU Genel Kamu Lisansı altında ücretsiz bir yazılımdır. Belirli koşullar altında dağıtabilir ve değiştirebilirsiniz. Ayrıntılar için http://www.gnu.org/licenses/old-licenses/gpl-2.0.html sitesine bakınız. Uygulamanın kaynak kodu https://github.com/Wikimedia/WikipediaMobile sitesinde mevcuttur.
+nearby-close=Yakındaki sayfaların ekranını kapat
+nearby-title=Yakındaki sayfaları
 search-results-did-you-mean-label=Bunu mu demek istediniz:
 search-results-no-results=Sonuç bulunamadı
 search-results-close=Arama sonuçlarını kapat
 search-button=Bu metin için Vikipedi'de arama yapın
 search-placeholder=Ara
+do-fulltext-search=Daha fazla sonuç göster...
