--- a/assets/www/messages/messages-tt-cyrl.properties
+++ b/assets/www/messages/messages-tt-cyrl.properties
@@ -70,3 +70,4 @@ search-results-no-results=Бернидә табылмады
 search-results-close=Эзләү нәтиҗәләрне ябарга
 search-button=Википедиядә әлеге текстны эзләргә
 search-placeholder=Эзләү
+do-fulltext-search=Башка нәтиҗәләр...
